--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,5 @@ DirectoryIndex public/index.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^ public/index.php [L]
+
+#RewriteRule ^(.*)$ index.php?PATH_INFO=$1 [L,QSA]
